--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                     <a href="https://tiffanyclark.github.io/Typing-Game/" class="button">See it live</a>
                     <a href="https://github.com/TiffanyClark/Typing-Game" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/rocket.png" class="article-img"
+                <img src="images/rocket.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
             </article>
             <article>
                 <div class="article-text">
                     <h3>Memory Card Game</h3>
                     <p>This is a memory game I created. I use HTML, CSS, and Javascript. .</p>
-                    <a href="tiffanyclark.github.io/memory-card-game/" class="button">See it live</a>
+                    <a href="https://tiffanyclark.github.io/memory-card-game/" class="button">See it live</a>
                     <a href="https://github.com/TiffanyClark/memory-card-game" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/img-5.png" class="article-img"
+                <img src="images/img-5.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
 
             </article>
@@ -68,10 +68,10 @@
                 <div class="article-text">
                     <h3>Terrarium</h3>
                     <p>Drag and drop project using Javascript.</p>
-                    <a href="tiffanyclark.github.io/Terrarium/" class="button">See it live</a>
+                    <a href="https://tiffanyclark.github.io/Terrarium/" class="button">See it live</a>
                     <a href="https://github.com/TiffanyClark/Terrarium" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/plant6.png" class="article-img"
+                <img src="images/plant6.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
             </article>
         </section>
